Revert "fixed contact spacing"
This reverts commit 66e05691761e343da26924e0d536cd38a249ff7b.

commit didn't go through

--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -109,9 +109,16 @@
 			font-size: 1.25rem;
 			width: 500px;
 		}
+		& .contact-background,
+		& .contact-backgroundTwo,
+		& .contact-backgroundThree {
+			width: 100vw;
+			height: 93vh;
+		}
 	}
 
 	footer.footer {
+		margin-top: 2rem;
 		display: block;
 		color: $text-color;
 		font-weight: 400;
@@ -122,7 +129,7 @@
 			display: flex;
 			justify-content: space-between;
 			margin: 0 2rem;
-			padding: 2rem 0;
+			padding: 1.5rem 0;
 			& .footer-left {
 				display: flex;
 				& p:nth-of-type(2) {
@@ -224,6 +231,7 @@
 	form.form {
 		border-radius: 0;
 		padding: 3rem 1rem;
+		width: 350px;
 		margin: 2rem auto 0 auto;
 		& .form-head {
 			flex-direction: column;
@@ -277,21 +285,9 @@
 	}
 
 	section.contact {
-		& h1 {
-			margin: 1rem 0;
-		}
-		& p {
-			margin: 0 auto;
-		}
 		& form.form {
 			padding: 1rem;
 			width: 300px;
-			margin: 1rem auto;
-			& {
-				label {
-					font-size: 0.8rem;
-				}
-			}
 			& .form-head {
 				& input {
 					width: 250px;
@@ -329,6 +325,14 @@
 			margin: 0 0.25rem;
 			font-size: 1rem;
 		}
+	}
+}
+
+@media screen and (min-width: 1800px) {
+	.header-container {
+		padding: 2rem 3rem 5rem 3rem;
+		max-width: 80rem;
+		margin: 5rem auto;
 	}
 }
 
