--- a/scss/style.scss
+++ b/scss/style.scss
@@ -593,13 +593,15 @@ textarea {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden;
 	overflow-y: hidden;
 	overflow-x: hidden;
 	& h1 {
-		margin: 2rem 0;
+		margin-top: 2rem;
 		font-weight: 300;
 		font-size: 2.5rem;
 		letter-spacing: 15px;
+		margin-bottom: 2rem;
 		text-transform: uppercase;
 	}
 	& p {
@@ -614,11 +616,12 @@ textarea {
 		position: absolute;
 		top: 0;
 		left: 0;
-		height: 100%;
+		height: 130vh;
 		width: 100vw;
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
+		overflow-y: hidden;
 		overflow-x: hidden;
 	}
 
@@ -646,6 +649,8 @@ form {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	// width: 600px;
+	// height: 550px;
 	margin: 2rem auto;
 	padding: 6rem 6rem;
 	background-color: rgba(255, 255, 255, 0.808);
@@ -666,7 +671,7 @@ form {
 		width: 100%;
 		justify-content: flex-start;
 		& input {
-			width: 11.625rem;
+			width: 186px;
 			padding: 0.5rem 1rem;
 		}
 		& .name-input {
